hphp/hack/test/typecheck/sealed/sealed_classes18.php.exp
File "sealed_classes18.php", line 2, characters 12-15:
`__Sealed` can only be used with named types, e.g. `Foo::class` (Parsing[1002])
File "sealed_classes18.php", line 2, characters 12-15:
`self` is undefined outside of a class (Typing[4059])
