hphp/hack/test/typecheck/sealed/sealed_classes18.php
<?hh
<<__Sealed(self::class)>> class X {}
